Dynamic Path i Routs tests