@@ -5,20 +5,28 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import com.client.helpers.Routes;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 public class RoutesTest {
+    Path currentRelativePath;
+
+    @BeforeEach
+    public void init() {
+        currentRelativePath = Paths.get("");
+    }
 
     @Test
     @DisplayName("Checking: Routes of Images")
-    void testGetImageRoutes() {
-        assertEquals("file:/G:/WarcabyGame/client/src/main/java/com/client/img/test.png",
+    void testGetImageRoutes() throws MalformedURLException {
+        assertEquals(currentRelativePath.toUri().toURL() + "src/main/java/com/client/img/test.png",
                 Routes.imageRoute("test.png"), "Cannot get image");
-
     }
 
     @Test
@@ -31,7 +39,7 @@ public class RoutesTest {
     @Test
     @DisplayName("Checking: Routes of Images")
     void testGetStyleRoutes() throws MalformedURLException {
-        assertEquals("file:/G:/WarcabyGame/client/src/main/java/com/client/styles/test.css",
+        assertEquals(currentRelativePath.toUri().toURL() + "src/main/java/com/client/styles/test.css",
                 Routes.styleRoute("test.css"), "Cannot get styles route");
     }
 
@@ -45,7 +53,7 @@ public class RoutesTest {
     @Test
     @DisplayName("Checking: Routes of Views")
     void testGetViewRoutes() throws MalformedURLException {
-        assertEquals(new URL("file:/G:/WarcabyGame/client/src/main/java/com/client/views/test.fxml"),
+        assertEquals(new URL(currentRelativePath.toUri().toURL() + "src/main/java/com/client/views/test.fxml"),
                 Routes.viewsRoute("test.fxml"), "Cannot get styles route");
 
     }
